--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body id="body">
-    <button id="createUser">Crear User</button>
+    <button id="createUser">Crear user</button>
     <button id="followUser">Seguir user</button>
     <button id="showUsers">Ver users</button>
     <button id="hideUsers">Ocultar users</button>
+    <button id="post">Publicar Post</button>
     <form id="form">
         <div class="form-group">
           <label for="username">Username</label>
@@ -21,15 +22,23 @@
           <input type="text" class="form-control" id="bio" placeholder="Enter bio" >
         </div>
         <button type="submit" class="btn btn-primary createUserButton" >Crear Usuario</button>
-      </form>
-      <form id="form2">
+    </form>
+    <form id="form2">
         <div class="form-group">
           <label for="usernameSearch">Username</label>
           <input type="text" class="form-control" id="usernameSearch" placeholder="Enter username">
         </div>
-        <button type="submit" class="btn btn-primary createUserButton">Buscar Usuario</button>
-      </form>
-      <script src="./js/User.js"></script>
+        <button type="submit" class="btn btn-primary createUserButton" id="shearchUserButton">Buscar Usuario</button>
+    </form>
+    <form id="postForm">
+        <div class="form-group">
+          <label for="postPub">Post Text</label>
+          <input type="text" class="form-control" id="postPub" placeholder="Enter username">
+        </div>
+        <button type="submit" class="btn btn-primary publicPostUserButton">Publicar Contenido</button>
+    </form>
+    <p id="postText"></p>
+    <script src="./js/User.js"></script>
     <script src="./js/Clases.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
